fix(styles): fix alignment of process def id table column
related to CAM-3467

--- a/webapps/client/styles/pages/dashboard.less
+++ b/webapps/client/styles/pages/dashboard.less
@@ -163,7 +163,6 @@ table {
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
-    text-align: right;
   }
 }
 
